correct pre code wrapping

--- a/assets/themes/hooligan/css/style.css
+++ b/assets/themes/hooligan/css/style.css
@@ -68,6 +68,10 @@ h2 {
 /* line 61, ../_sass/_base.scss */
 pre, code {
   color: #ccc;
+  word-wrap:normal;
+  white-space:pre;
+  word-break: normal;
+  overflow-x: auto;
 }
 
 /* line 65, ../_sass/_base.scss */
